# ContractDA

./: README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  usage.rst
example/cli/: example_batch.py  example_cli.py
example/command_files/: read_design.inp  simulate_design.inp
example/contracts/: example_agcontract.py  example_cbcontract.py  example_contract_base.py  example_contracts.py  example_independent.py  example_independent_explicit.py
example/design_files/: simple_design.json  simple_design_composition1.json  simple_design_composition1_failure.json  simple_design_feedback_composition.json  simple_design_simulation.json  simple_module_adder2.json  simple_module_sys.json
example/designs/: example_connections.py  example_design_contract_creation.py  example_design_mgr.py  example_design_verification.py  example_module.py  example_ports.py  example_pyapi.py  example_subsystem_connection_type.py  example_system_contracts.py  example_system_evaluation.py  example_system_lib.py  example_system_simulation.py  example_systems.py  example_systems_nolib.py
example/parser/: example_parser.py
example/sets/: example_clause_set.py  example_explicit_set.py  example_vars.py
example/simulation_exp/: scalability_behaviors.py  scalability_level.py  simple_example.py
example/simulator/: example_autoboundary.py  example_autoboundary_generator.py  example_autoboundary_linear.py  example_autosim.py  example_cb_range.py  example_simulator.py
src/contractda/: __init__.py
test/test_contracts/: test_ag_cb.py  test_agcontract_explicit.py  test_agcontract_inde_clause.py  test_agcontract_inde_explicit.py  (+2 more)
(+85 files in other folders)
