[project]
name = "ContractDA"
version = "0.1.0"
description = "A design automation tool for contract-based design"
authors = [
    {name = "Sheng-Jung Yu", email = "shengjungyu@berkeley.edu"},
]
dependencies = [
    "ContractDA @ file:///${PROJECT_ROOT}",
    "sphinx>=7.2.6",
    "pytest>=8.0.2",
    "sphinx-rtd-theme>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
